# WordyWatch

./: .gitignore  LICENSE  README.md  WordyFW.code-workspace
.github/workflows/: deploy-flasher.yml
Case/Design/: Wordy Watch v19.f3d  Wordy Watch v25.f3d
Case/FacePrint/: wordclock-grid.dxf
Case/Outputs3D/: Cutting Outline.dxf  Front Face.dxf  Front Sheet Laser Cut.dxf  LED Diffuser Blocking.3mf  LED Diffuser Pyramids.3mf  WatchCase.step  Wordy Watch Button with Support.3mf  Wordy Watch Button.3mf  Wordy Watch Case.3mf
Design/GridGeneratorRust/: README.md
FaceDesign/GridOptimizationFailedAttempt/: FirstAttemptGrid.xlsx  README.md  crossword_optimizer.py  crossword_solution.txt
PCB/CharlieplexGenerator/: PATTERN_SUMMARY.md  PCB_GENERATOR_README.md  PCB_PCB_TestCharlieplex1_2025-11-02.json  README.md  SCH_TestCharlieplex1_2025-11-02.json  generate_charlieplex_pcb.py  generate_charlieplex_sch.py  output_charlieplex_12x11.json  output_schematic_Z.json
PCB/V1.0/: PCB_PCB_Wordy-Watch-V1_2025-11-04.json  SCH_Wordy-Watch-V1_2025-11-04.json  wordclock-grid.dxf
WordyFW/: .raftcli_history  Dockerfile  README.md
WordyFW/components/WordyWatch/: Accelerometer.h  BallSimGame.cpp  BallSimGame.h  BreakoutGame.cpp  BreakoutGame.h  CMakeLists.txt  GameMode.cpp  GameMode.h  Power.h  PowerAndSleep.h  RTC.h  UARTLogger.cpp  UARTLogger.h  WordyWatch.cpp  WordyWatch.h  WordyWatchDisplay.cpp  WordyWatchDisplay.h
WordyWatchWebApp/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
flasher/: README.md  index.html
(+99 files in other folders)
