idf_component_register(
                SRCS 
                  "WordyWatch.cpp"
                  "WordyWatchDisplay.cpp"
                  "BallSimGame.cpp"
                  "BreakoutGame.cpp"
                  "GameMode.cpp"
                INCLUDE_DIRS
                  "."
                REQUIRES
                  RaftCore
                  esp_driver_i2c
                PRIV_REQUIRES
                  DeviceLEDCharlie
                )
